package dataControllerUtils.protobuf;

import "dataControllerUtils/DataPayload.proto";
import "dataControllerUtils/DataId.proto";


//Query to archive, with parameter, filters, interval and sampling level (for plot) (eventually)
message NewDataMessage {
extensions 14 to 107;
  required DataId dataId = 1;
  repeated DataPayload payloads = 2;
  optional string id = 3;

  enum DataSource {
    UNKNOWN = 0;
    REAL_TIME = 1;
    ARCHIVE = 2;
  }
  
  
  required DataSource dataSource = 4; 
  
  
  //True if all data from archive was retrieved for query, False otherwise
  optional bool isEndOfQuery = 5; // only for data from Archive. 

}
